chore(): minor update env setup notebook

--- a/env_setup.ipynb
+++ b/env_setup.ipynb
@@ -186,6 +186,11 @@
       "Using cached tzdata-2025.1-py2.py3-none-any.whl (346 kB)\n",
       "Installing collected packages: pytz, tzdata, pandas\n",
       "Successfully installed pandas-2.2.3 pytz-2025.1 tzdata-2025.1\n",
+      "Collecting tqdm\n",
+      "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Installing collected packages: tqdm\n",
+      "Successfully installed tqdm-4.67.1\n",
       "Collecting vit-pytorch\n",
       "  Using cached vit_pytorch-1.10.1-py3-none-any.whl.metadata (69 kB)\n",
       "Collecting einops>=0.7.0 (from vit-pytorch)\n",
@@ -207,20 +212,15 @@
       "Using cached vit_pytorch-1.10.1-py3-none-any.whl (140 kB)\n",
       "Using cached einops-0.8.1-py3-none-any.whl (64 kB)\n",
       "Installing collected packages: einops, vit-pytorch\n",
-      "Successfully installed einops-0.8.1 vit-pytorch-1.10.1\n",
-      "Collecting tqdm\n",
-      "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
-      "Installing collected packages: tqdm\n",
-      "Successfully installed tqdm-4.67.1\n"
+      "Successfully installed einops-0.8.1 vit-pytorch-1.10.1\n"
      ]
     }
    ],
    "source": [
     "!pip3 install scikit-learn\n",
     "!pip3 install pandas\n",
-    "!pip3 install vit-pytorch       # Crossformer model\n",
-    "!pip3 install tqdm              # Progress meter"
+    "!pip3 install tqdm              # Progress meter\n",
+    "!pip3 install vit-pytorch       # Crossformer model"
    ]
   },
   {
