chore(): integrate env setup into model training notebook

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,6 +2,130 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2bbf5a69",
+   "metadata": {},
+   "source": [
+    "# Cosmoformer model training and evaluating"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef7c3194",
+   "metadata": {},
+   "source": [
+    "## Step 0: Environment dependencies setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a57e1c6",
+   "metadata": {},
+   "source": [
+    "Update PIP package manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b2548d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db18ca9c",
+   "metadata": {},
+   "source": [
+    "Run the cell below to intall PyThorch library with dependecies based on your hardware.  \n",
+    "Select PyTorch installation type:\n",
+    "1. CPU\n",
+    "2. Nvidia GPU\n",
+    "3. AMD GPU\n",
+    "4. Apple Silicon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e57440a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you see any error, please, check the Python version.\n",
+    "# Last tested Python version is 3.12.\n",
+    "\n",
+    "choice = input(\"Select PyTorch installation type:\\n\"\n",
+    "               \"1. CPU\\n\"\n",
+    "               \"2. Nvidia GPU\\n\"\n",
+    "               \"3. AMD GPU\\n\"\n",
+    "               \"4. Apple Silicon\\n\"\n",
+    "               \"Enter the number corresponding to your choice: \")\n",
+    "\n",
+    "if choice == \"1\":\n",
+    "    print(\"Installing PyTorch for CPU...\")\n",
+    "    !pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu\n",
+    "    \n",
+    "elif choice == \"2\":\n",
+    "    print(\"Installing PyTorch for Nvidia GPU...\")\n",
+    "    !pip3 install torch torchvision torchaudio\n",
+    "elif choice == \"3\":\n",
+    "    print(\"Installing PyTorch for AMD GPU...\")\n",
+    "    !pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.2\n",
+    "elif choice == \"4\":\n",
+    "    print(\"Installing PyTorch for Apple Silicon...\")\n",
+    "    !pip3 install torch torchvision torchaudio\n",
+    "else:\n",
+    "    print(\"Invalid choice. Please run the cell again and select a valid option.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bce49d95",
+   "metadata": {},
+   "source": [
+    "Installind external libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fed051d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip3 install matplotlib\n",
+    "!pip3 install scikit-learn\n",
+    "!pip3 install pandas\n",
+    "!pip3 install pyarrow\n",
+    "!pip3 install tqdm              # Progress meter\n",
+    "!pip3 install vit-pytorch       # Crossformer model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "193253e8",
+   "metadata": {},
+   "source": [
+    "Add Git LFS support (optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab3d60f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !git lfs install\n",
+    "# !git lfs track \"*.pth\"\n",
+    "# !git add .gitattributes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4eda648",
    "metadata": {},
    "source": [
@@ -10,21 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "a9624d65",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(device(type='cuda'), 11)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import math\n",
@@ -60,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "eb072e8a",
    "metadata": {},
    "outputs": [],
@@ -82,7 +195,7 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        row = self.data.iloc[idx]\n",
-    "        img_path = \"cosmoformer-dataset/dataset/\"+row['img_path']\n",
+    "        img_path = \"cosmoformer-dataset/\"+row['img_path']\n",
     "        label_str = row['label']\n",
     "\n",
     "        image = Image.open(img_path).convert('RGB')\n",
@@ -101,19 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "c5abbeee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_DATASET_PATH = \"cosmoformer-dataset/dataset/train.parquet\"\n",
-    "VALIDATION_DATASET_PATH = \"cosmoformer-dataset/dataset/validation.parquet\"\n",
-    "TEST_DATASET_PATH = \"cosmoformer-dataset/dataset/test.parquet\""
+    "TRAIN_DATASET_PATH = \"cosmoformer-dataset/train.parquet\"\n",
+    "VALIDATION_DATASET_PATH = \"cosmoformer-dataset/validation.parquet\"\n",
+    "TEST_DATASET_PATH = \"cosmoformer-dataset/test.parquet\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "93a1d6a4",
    "metadata": {},
    "outputs": [],
@@ -125,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "9f80e987",
    "metadata": {},
    "outputs": [
@@ -145,9 +258,9 @@
     "val_image, val_label = val_df['img_path'][0], val_df['label'][0]\n",
     "test_image, test_label = test_df['img_path'][0], test_df['label'][0]\n",
     "\n",
-    "train_image = Image.open(\"cosmoformer-dataset/dataset/\" + train_image)\n",
-    "val_image = Image.open(\"cosmoformer-dataset/dataset/\" + val_image)\n",
-    "test_image = Image.open(\"cosmoformer-dataset/dataset/\" + test_image)\n",
+    "train_image = Image.open(\"cosmoformer-dataset/\" + train_image)\n",
+    "val_image = Image.open(\"cosmoformer-dataset/\" + val_image)\n",
+    "test_image = Image.open(\"cosmoformer-dataset/\" + test_image)\n",
     "\n",
     "# Plot the images\n",
     "fig, axes = plt.subplots(1, 3, figsize=(10, 5))\n",
@@ -171,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "2c83446c",
    "metadata": {},
    "outputs": [
@@ -203,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "787d4d3f",
    "metadata": {},
    "outputs": [],
@@ -247,20 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "b421e663",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train train set size: 125575\n",
-      "Validation set size: 41859\n",
-      "Test set size: 41859\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset = ParquetImageDataset(\n",
     "    parquet_file=TRAIN_DATASET_PATH,\n",
@@ -295,30 +398,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "e3093138",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "label\n",
-       "smooth_inbetween                  47179\n",
-       "smooth_round                      32944\n",
-       "unbarred_spiral                   15672\n",
-       "smooth_cigar                      11847\n",
-       "irregular                          7089\n",
-       "barred_spiral                      5483\n",
-       "edge_on_disk                       2774\n",
-       "featured_without_bar_or_spiral     2587\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_counts = train_df['label'].value_counts()\n",
     "class_counts"
@@ -326,22 +409,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "5451248e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1.8238e-04, 3.6049e-04, 3.8655e-04, 1.4106e-04, 8.4410e-05, 2.1196e-05,\n",
-       "        3.0355e-05, 6.3808e-05], device='cuda:0')"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_classes = len(le.classes_)\n",
     "weight_array = np.zeros(num_classes, dtype=np.float32)\n",
@@ -358,23 +429,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "1e09915a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x7fe2e886ff20>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7fe2defaed50>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7fe2dce30f20>)"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 64\n",
     "\n",
@@ -412,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "9c81f466",
    "metadata": {},
    "outputs": [],
@@ -578,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "id": "b78e954e",
    "metadata": {},
    "outputs": [
@@ -588,7 +646,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,14 +662,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "id": "48a94774",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b51874b6fca64d80987b479c8355ee2f",
+       "model_id": "0ef2628a47a34e34853df9c2b1a6e7e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -621,6 +679,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/artursultanov/uni/cosmoformer-model/venv/lib64/python3.12/site-packages/torch/functional.py:402: UserWarning: Attempting to use hipBLASLt on an unsupported architecture! Overriding blas backend to hipblas (Triggered internally at ../aten/src/ATen/Context.cpp:296.)\n",
+      "  return _VF.einsum(equation, operands)  # type: ignore[attr-defined]\n"
+     ]
     },
     {
      "name": "stdout",
@@ -669,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "id": "4e9ed356",
    "metadata": {},
    "outputs": [
@@ -677,11 +743,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random sample index: 8441\n",
-      "Predicted class index: 1\n",
-      "Predicted class: edge_on_disk\n",
-      "Real truth class index: 1\n",
-      "Real truth class: edge_on_disk\n"
+      "Random sample index: 108976\n",
+      "Predicted class index: 5\n",
+      "Predicted class: smooth_inbetween\n",
+      "Real truth class index: 5\n",
+      "Real truth class: smooth_inbetween\n"
      ]
     }
    ],
