chore(): cleaning notebook outputs to make it more pretty looking

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "9f80e987",
    "metadata": {},
    "outputs": [
@@ -662,14 +662,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "48a94774",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ef2628a47a34e34853df9c2b1a6e7e5",
+       "model_id": "c1ef4dbdd1b64304ac99902841c47362",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,18 +681,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/artursultanov/uni/cosmoformer-model/venv/lib64/python3.12/site-packages/torch/functional.py:402: UserWarning: Attempting to use hipBLASLt on an unsupported architecture! Overriding blas backend to hipblas (Triggered internally at ../aten/src/ATen/Context.cpp:296.)\n",
-      "  return _VF.einsum(equation, operands)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.8010 | Test Acc: 0.7599\n"
+      "Test Loss: 0.8014 | Test Acc: 0.7598\n"
      ]
     }
    ],
@@ -735,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "4e9ed356",
    "metadata": {},
    "outputs": [
@@ -743,16 +735,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random sample index: 108976\n",
-      "Predicted class index: 5\n",
-      "Predicted class: smooth_inbetween\n",
-      "Real truth class index: 5\n",
-      "Real truth class: smooth_inbetween\n"
+      "Random sample index: 107883\n",
+      "Predicted class index: 1\n",
+      "Predicted class: edge_on_disk\n",
+      "Real truth class index: 1\n",
+      "Real truth class: edge_on_disk\n"
      ]
     }
    ],
    "source": [
-    "# Example label mapping\n",
+    "# Label mapping\n",
     "label_mapping = {\n",
     "    0: 'barred_spiral',\n",
     "    1: 'edge_on_disk',\n",
