feat(): adding models weights and traces

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -21,7 +21,7 @@
    "id": "6a57e1c6",
    "metadata": {},
    "source": [
-    "Update PIP package manager"
+    "### Update PIP package manager"
    ]
   },
   {
@@ -86,22 +86,35 @@
    "id": "bce49d95",
    "metadata": {},
    "source": [
-    "Installind external libraries"
+    "### Installind external libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "fed051d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting torchinfo\n",
+      "  Downloading torchinfo-1.8.0-py3-none-any.whl.metadata (21 kB)\n",
+      "Downloading torchinfo-1.8.0-py3-none-any.whl (23 kB)\n",
+      "Installing collected packages: torchinfo\n",
+      "Successfully installed torchinfo-1.8.0\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip3 install matplotlib\n",
-    "!pip3 install scikit-learn\n",
-    "!pip3 install pandas\n",
-    "!pip3 install pyarrow\n",
-    "!pip3 install tqdm              # Progress meter\n",
-    "!pip3 install vit-pytorch       # Crossformer model"
+    "!pip3 install torchinfo\n",
+    "!pip3 install -q -U matplotlib\n",
+    "!pip3 install -q -U scikit-learn\n",
+    "!pip3 install -q -U pandas\n",
+    "!pip3 install -q -U pyarrow\n",
+    "!pip3 install -q -U tqdm              # Progress meter\n",
+    "!pip3 install -q -U vit-pytorch       # Crossformer model"
    ]
   },
   {
@@ -109,12 +122,12 @@
    "id": "193253e8",
    "metadata": {},
    "source": [
-    "Add Git LFS support (optional)"
+    "### Add Git LFS support (optional)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ab3d60f9",
    "metadata": {},
    "outputs": [],
@@ -134,10 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "a9624d65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(device(type='cuda'), 11)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import math\n",
@@ -149,6 +173,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from torchinfo import summary\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision.transforms import v2\n",
     "from tqdm.auto import tqdm\n",
@@ -173,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "eb072e8a",
    "metadata": {},
    "outputs": [],
@@ -214,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "c5abbeee",
    "metadata": {},
    "outputs": [],
@@ -226,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "93a1d6a4",
    "metadata": {},
    "outputs": [],
@@ -238,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "9f80e987",
    "metadata": {},
    "outputs": [
@@ -284,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "2c83446c",
    "metadata": {},
    "outputs": [
@@ -316,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "787d4d3f",
    "metadata": {},
    "outputs": [],
@@ -360,10 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "b421e663",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train train set size: 125575\n",
+      "Validation set size: 41859\n",
+      "Test set size: 41859\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataset = ParquetImageDataset(\n",
     "    parquet_file=TRAIN_DATASET_PATH,\n",
@@ -398,10 +433,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "e3093138",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "smooth_inbetween                  47179\n",
+       "smooth_round                      32944\n",
+       "unbarred_spiral                   15672\n",
+       "smooth_cigar                      11847\n",
+       "irregular                          7089\n",
+       "barred_spiral                      5483\n",
+       "edge_on_disk                       2774\n",
+       "featured_without_bar_or_spiral     2587\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class_counts = train_df['label'].value_counts()\n",
     "class_counts"
@@ -409,10 +464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "5451248e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.8238e-04, 3.6049e-04, 3.8655e-04, 1.4106e-04, 8.4410e-05, 2.1196e-05,\n",
+       "        3.0355e-05, 6.3808e-05], device='cuda:0')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_classes = len(le.classes_)\n",
     "weight_array = np.zeros(num_classes, dtype=np.float32)\n",
@@ -429,10 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1e09915a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<torch.utils.data.dataloader.DataLoader at 0x7f7b891ba4b0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f7b891bafc0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f7b891b8140>)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batch_size = 64\n",
     "\n",
@@ -470,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9c81f466",
    "metadata": {},
    "outputs": [],
@@ -636,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "b78e954e",
    "metadata": {},
    "outputs": [
@@ -646,7 +726,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,14 +742,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "48a94774",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1ef4dbdd1b64304ac99902841c47362",
+       "model_id": "24836f2dce5c4513911efe35748fafed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -684,7 +764,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.8014 | Test Acc: 0.7598\n"
+      "Test Loss: 0.8010 | Test Acc: 0.7599\n"
      ]
     }
    ],
@@ -727,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "4e9ed356",
    "metadata": {},
    "outputs": [
@@ -735,11 +815,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random sample index: 107883\n",
-      "Predicted class index: 1\n",
-      "Predicted class: edge_on_disk\n",
-      "Real truth class index: 1\n",
-      "Real truth class: edge_on_disk\n"
+      "Random sample index: 37750\n",
+      "Predicted class index: 4\n",
+      "Predicted class: smooth_cigar\n",
+      "Real truth class index: 4\n",
+      "Real truth class: smooth_cigar\n"
      ]
     }
    ],
@@ -777,6 +857,94 @@
     "print(\"Predicted class:\", predicted_class_name)\n",
     "print(\"Real truth class index:\", example_label_int.item())\n",
     "print(\"Real truth class:\", real_truth_class_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "3cdcce31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==============================================================================================================\n",
+       "Layer (type:depth-idx)                                       Output Shape              Param #\n",
+       "==============================================================================================================\n",
+       "CrossFormer                                                  [1, 8]                    --\n",
+       "├─ModuleList: 1-1                                            --                        --\n",
+       "│    └─ModuleList: 2-1                                       --                        --\n",
+       "│    │    └─CrossEmbedLayer: 3-1                             [1, 32, 56, 56]           17,696\n",
+       "│    │    └─Transformer: 3-2                                 [1, 32, 56, 56]           51,332\n",
+       "│    └─ModuleList: 2-2                                       --                        --\n",
+       "│    │    └─CrossEmbedLayer: 3-3                             [1, 64, 28, 28]           20,544\n",
+       "│    │    └─Transformer: 3-4                                 [1, 64, 28, 28]           201,988\n",
+       "│    └─ModuleList: 2-3                                       --                        --\n",
+       "│    │    └─CrossEmbedLayer: 3-5                             [1, 128, 14, 14]          82,048\n",
+       "│    │    └─Transformer: 3-6                                 [1, 128, 14, 14]          1,602,568\n",
+       "│    └─ModuleList: 2-4                                       --                        --\n",
+       "│    │    └─CrossEmbedLayer: 3-7                             [1, 256, 7, 7]            327,936\n",
+       "│    │    └─Transformer: 3-8                                 [1, 256, 7, 7]            3,191,812\n",
+       "├─Sequential: 1-2                                            [1, 8]                    --\n",
+       "│    └─Reduce: 2-5                                           [1, 256]                  --\n",
+       "│    └─Linear: 2-6                                           [1, 8]                    2,056\n",
+       "==============================================================================================================\n",
+       "Total params: 5,497,980\n",
+       "Trainable params: 5,497,980\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (Units.MEGABYTES): 886.86\n",
+       "==============================================================================================================\n",
+       "Input size (MB): 0.60\n",
+       "Forward/backward pass size (MB): 80.43\n",
+       "Params size (MB): 21.99\n",
+       "Estimated Total Size (MB): 103.03\n",
+       "=============================================================================================================="
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary(model, input_size=(1, 3, 224, 224))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "a7747ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"cosmoformer_weights.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "8f39e5bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traced TorchScript model saved to cosmoformer_traced.pt\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "\n",
+    "example_input = torch.randn(1, 3, 224, 224, device=\"cuda\")\n",
+    "\n",
+    "traced_model = torch.jit.trace(model, example_input)\n",
+    "\n",
+    "# Save TorchScript\n",
+    "script_path = \"cosmoformer_traced.pt\"\n",
+    "torch.jit.save(traced_model, script_path)\n",
+    "print(f\"Traced TorchScript model saved to {script_path}\")\n"
    ]
   }
  ],
