--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -91,22 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "fed051d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting torchinfo\n",
-      "  Downloading torchinfo-1.8.0-py3-none-any.whl.metadata (21 kB)\n",
-      "Downloading torchinfo-1.8.0-py3-none-any.whl (23 kB)\n",
-      "Installing collected packages: torchinfo\n",
-      "Successfully installed torchinfo-1.8.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip3 install torchinfo\n",
     "!pip3 install -q -U matplotlib\n",
@@ -147,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "a9624d65",
    "metadata": {},
    "outputs": [
@@ -157,7 +145,7 @@
        "(device(type='cuda'), 11)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "eb072e8a",
    "metadata": {},
    "outputs": [],
@@ -239,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "c5abbeee",
    "metadata": {},
    "outputs": [],
@@ -251,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "93a1d6a4",
    "metadata": {},
    "outputs": [],
@@ -263,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "9f80e987",
    "metadata": {},
    "outputs": [
@@ -309,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "2c83446c",
    "metadata": {},
    "outputs": [
@@ -341,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "787d4d3f",
    "metadata": {},
    "outputs": [],
@@ -385,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "b421e663",
    "metadata": {},
    "outputs": [
@@ -433,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "e3093138",
    "metadata": {},
    "outputs": [
@@ -452,7 +440,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "5451248e",
    "metadata": {},
    "outputs": [
@@ -475,7 +463,7 @@
        "        3.0355e-05, 6.3808e-05], device='cuda:0')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,19 +484,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "1e09915a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x7f7b891ba4b0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7f7b891bafc0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7f7b891b8140>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x7f456b687bf0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f455fb09070>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f455fb677d0>)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "9c81f466",
    "metadata": {},
    "outputs": [],
@@ -716,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "b78e954e",
    "metadata": {},
    "outputs": [
@@ -726,7 +714,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,14 +730,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "id": "48a94774",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24836f2dce5c4513911efe35748fafed",
+       "model_id": "352d928f46034b02bdf4992d2b275895",
        "version_major": 2,
        "version_minor": 0
       },
@@ -922,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "id": "8f39e5bd",
    "metadata": {},
    "outputs": [
@@ -930,7 +918,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traced TorchScript model saved to cosmoformer_traced.pt\n"
+      "Traced TorchScript model saved to cosmoformer_traced_cuda.pt\n"
      ]
     }
    ],
@@ -942,7 +930,35 @@
     "traced_model = torch.jit.trace(model, example_input)\n",
     "\n",
     "# Save TorchScript\n",
-    "script_path = \"cosmoformer_traced.pt\"\n",
+    "script_path = \"cosmoformer_traced_cuda.pt\"\n",
+    "torch.jit.save(traced_model, script_path)\n",
+    "print(f\"Traced TorchScript model saved to {script_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "436dad1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traced TorchScript model saved to cosmoformer_traced_cpu.pt\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "\n",
+    "model = model.to(\"cpu\")\n",
+    "\n",
+    "example_input = torch.randn(1, 3, 224, 224, device=\"cpu\")\n",
+    "\n",
+    "traced_model = torch.jit.trace(model, example_input)\n",
+    "\n",
+    "script_path = \"cosmoformer_traced_cpu.pt\"\n",
     "torch.jit.save(traced_model, script_path)\n",
     "print(f\"Traced TorchScript model saved to {script_path}\")\n"
    ]
