chore(): update PyTorch Lib to rocm6.3

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -26,10 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "54b2548d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pip in ./venv/lib64/python3.12/site-packages (24.3.1)\n",
+      "Collecting pip\n",
+      "  Using cached pip-25.1-py3-none-any.whl.metadata (3.6 kB)\n",
+      "Using cached pip-25.1-py3-none-any.whl (1.8 MB)\n",
+      "Installing collected packages: pip\n",
+      "  Attempting uninstall: pip\n",
+      "    Found existing installation: pip 24.3.1\n",
+      "    Uninstalling pip-24.3.1:\n",
+      "      Successfully uninstalled pip-24.3.1\n",
+      "Successfully installed pip-25.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --upgrade pip"
    ]
@@ -58,10 +76,10 @@
     "# Last tested Python version is 3.12.\n",
     "\n",
     "choice = input(\"Select PyTorch installation type:\\n\"\n",
-    "               \"1. CPU\\n\"\n",
-    "               \"2. Nvidia GPU\\n\"\n",
-    "               \"3. AMD GPU\\n\"\n",
-    "               \"4. Apple Silicon\\n\"\n",
+    "               \"1. CPU;\\n\"\n",
+    "               \"2. Nvidia GPU;\\n\"\n",
+    "               \"3. AMD GPU;\\n\"\n",
+    "               \"4. Apple Silicon;\\n\"\n",
     "               \"Enter the number corresponding to your choice: \")\n",
     "\n",
     "if choice == \"1\":\n",
@@ -73,7 +91,7 @@
     "    !pip3 install torch torchvision torchaudio\n",
     "elif choice == \"3\":\n",
     "    print(\"Installing PyTorch for AMD GPU...\")\n",
-    "    !pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.2\n",
+    "    !pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.3\n",
     "elif choice == \"4\":\n",
     "    print(\"Installing PyTorch for Apple Silicon...\")\n",
     "    !pip3 install torch torchvision torchaudio\n",
@@ -980,7 +998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
