--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -26,28 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "54b2548d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pip in ./venv/lib64/python3.12/site-packages (24.3.1)\n",
-      "Collecting pip\n",
-      "  Using cached pip-25.1-py3-none-any.whl.metadata (3.6 kB)\n",
-      "Using cached pip-25.1-py3-none-any.whl (1.8 MB)\n",
-      "Installing collected packages: pip\n",
-      "  Attempting uninstall: pip\n",
-      "    Found existing installation: pip 24.3.1\n",
-      "    Uninstalling pip-24.3.1:\n",
-      "      Successfully uninstalled pip-24.3.1\n",
-      "Successfully installed pip-25.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install --upgrade pip"
    ]
@@ -133,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "ab3d60f9",
    "metadata": {},
    "outputs": [],
@@ -153,21 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a9624d65",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(device(type='cuda'), 11)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import math\n",
@@ -182,7 +153,7 @@
     "from torchinfo import summary\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision.transforms import v2\n",
-    "from tqdm.auto import tqdm\n",
+    "from tqdm.notebook import tqdm\n",
     "from PIL import Image\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from vit_pytorch.crossformer import CrossFormer\n",
@@ -204,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "eb072e8a",
    "metadata": {},
    "outputs": [],
@@ -245,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "c5abbeee",
    "metadata": {},
    "outputs": [],
@@ -257,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "93a1d6a4",
    "metadata": {},
    "outputs": [],
@@ -269,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "9f80e987",
    "metadata": {},
    "outputs": [
@@ -315,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "2c83446c",
    "metadata": {},
    "outputs": [
@@ -347,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "787d4d3f",
    "metadata": {},
    "outputs": [],
@@ -391,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "b421e663",
    "metadata": {},
    "outputs": [
@@ -439,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "e3093138",
    "metadata": {},
    "outputs": [
@@ -458,7 +429,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "5451248e",
    "metadata": {},
    "outputs": [
@@ -481,7 +452,7 @@
        "        3.0355e-05, 6.3808e-05], device='cuda:0')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,19 +473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "1e09915a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x7f456b687bf0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7f455fb09070>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7f455fb677d0>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x7f234ce4baa0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f2355966180>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f234cde9cd0>)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,8 +526,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90a57872",
+   "metadata": {},
+   "source": [
+    "The reference of model provided in [lucidrains/vit-pytorch](https://github.com/lucidrains/vit-pytorch?tab=readme-ov-file#crossformer):\n",
+    "\n",
+    "```\n",
+    "model = CrossFormer(\n",
+    "    num_classes = 1000,                # number of output classes\n",
+    "    dim = (64, 128, 256, 512),         # dimension at each stage\n",
+    "    depth = (2, 2, 8, 2),              # depth of transformer at each stage\n",
+    "    global_window_size = (8, 4, 2, 1), # global window sizes at each stage\n",
+    "    local_window_size = 7,             # local window size (can be customized for each stage, but in paper, held constant at 7 for all stages)\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "9c81f466",
    "metadata": {},
    "outputs": [],
@@ -584,10 +573,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6e962f10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of epochs: 20\n",
+      "The number of warm up epochs: 2\n"
+     ]
+    }
+   ],
    "source": [
     "os.makedirs(\"checkpoints\", exist_ok=True) # directory for checkpoints store\n",
     "\n",
@@ -722,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b78e954e",
    "metadata": {},
    "outputs": [
@@ -748,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "48a94774",
    "metadata": {},
    "outputs": [
@@ -813,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "4e9ed356",
    "metadata": {},
    "outputs": [
@@ -867,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "3cdcce31",
    "metadata": {},
    "outputs": [
@@ -918,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "a7747ebe",
    "metadata": {},
    "outputs": [],
@@ -928,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "8f39e5bd",
    "metadata": {},
    "outputs": [
@@ -955,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "436dad1a",
    "metadata": {},
    "outputs": [
